Add links to responses metadata
